# hex-tic-tac-toe

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
bot-api/: Dockerfile  README.md  server.ts
bot-optimizer/: README.md  compare-greedy-mcts.ts  generate-challengers.ts  promote-best.ts  run.ts
bot-optimizer/lib/: cli.ts  population.ts  report.ts  research.ts  simulate.ts  tournament.ts  tuning.ts  types.ts
datasets/hexo-archive/: README.md  crawl-manifest.json  games.jsonl  metadata-summary.json  metadata.jsonl  summary.json
datasets/hexo-archive/replay-subsets/max-pre-elo-gt-1000-moves-gt-10/: games.jsonl  manifest.json  summary.json
infra/: RUNBOOK.md  cdk.context.json  cdk.json  package-lock.json  package.json
infra/lambda/: archive_store.py  connect.py  disconnect.py  message.py  tracked_games.py
infra/lib/: hex-ttt-certificate-stack.ts  hex-ttt-stack.ts
infra/scripts/: deploy-hex-ttt.sh
planning/: hexo-archive-research.md
scripts/bot/: arena-compare.ts  eval-calibration.ts
scripts/hexo-archive/: build-clean-metadata.ts  classify-replay-endgames.ts  evaluate-forced-win-bot-turns.ts  export-replay-subset.ts  fetch-archive-metadata.ts
src/: App.css  App.tsx  index.css
src/bot/: board.ts  engine.ts  evaluation.ts  search-options.ts  search.ts  types.ts  wasm-backend.ts
tests/: bot-root-candidate-widening.test.ts  bot-threat-characterization.test.ts
wasm-bot/: Cargo.toml  README.md
wasm-bot/src/: lib.rs
(+247 files in other folders)
