[package]
name = "hex_ttt_wasm"
version = "0.1.0"
edition = "2021"
description = "Rust/WebAssembly bot runtime for hex-ttt"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
